[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemos"
version = "0.2.0"
description = "独立记忆世界 — 可移植的多层AI记忆系统，支持6路信号融合检索、时序推理、信念修正与用户画像"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mnemos Team", email = "yml0114@gmail.com"},
]
keywords = [
    "ai", "memory", "agent", "mcp", "llm",
    "embedding", "temporal-reasoning", "belief-revision",
    "semantic-search", "bm25", "user-profile",
    "rag", "vector-search", "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/yml0114/mnemos"
Documentation = "https://github.com/yml0114/mnemos#readme"
Repository = "https://github.com/yml0114/mnemos"
Issues = "https://github.com/yml0114/mnemos/issues"
Changelog = "https://github.com/yml0114/mnemos/releases"

[project.optional-dependencies]
embedding = [
    "onnxruntime>=1.17",
    "huggingface_hub>=0.20",
    "tokenizers>=0.19",
]
judge = [
    "openai>=1.0",
    "httpx>=0.27",
]
all = [
    "mnemos[embedding,judge]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
mnemos-server = "mnemos.mcp.server:main"
mnemos-dashboard = "mnemos.viz.dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["mnemos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
